--- a/404.html
+++ b/404.html
@@ -4,40 +4,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta http-equiv="refresh" content="0;url=/" /> -->
+    <style>
+      main {
+        background-color: #f3f4f6;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+      }
+
+      .error-container {
+        background-color: white;
+        padding: 2rem;
+        border-radius: 0.5rem;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 480px;
+        text-align: center;
+      }
+
+      .title {
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: #2563eb;
+        margin-bottom: 1rem;
+      }
+
+      .error-code {
+        font-size: 2.25rem;
+        font-weight: 700;
+        color: #1f2937;
+        margin-bottom: 1rem;
+      }
+
+      .error-message {
+        font-size: 1.25rem;
+        color: #4b5563;
+        margin-bottom: 2rem;
+      }
+
+      .error-description {
+        color: #4b5563;
+        margin-bottom: 2rem;
+      }
+
+      .home-button {
+        background-color: #2563eb;
+        color: white;
+        padding: 0.5rem 1rem;
+        border-radius: 0.25rem;
+        font-weight: 700;
+        text-decoration: none;
+      }
+    </style>
     <script>
       function redirectSPA() {
-        const params = new URLSearchParams(window.location.search);
-        if (params.get("redirected")) {
-          return;
-        }
-
-        const path = window.location.pathname;
-        const query = window.location.search;
-
-        const baseUrl = import.meta.env.VITE_BASE_PATH || '/';
-        window.location.replace(
-          `${baseUrl}/?redirect=${encodeURIComponent(path + query)}&redirected=true`,
-        );
+        // const baseUrl = import.meta.env.VITE_BASE_PATH || '/';
+        window.location.replace(window.location.pathname + "/");
       }
       redirectSPA();
     </script>
     <title>Page Not Found</title>
   </head>
   <body>
-    <main class="bg-gray-100 flex items-center justify-center min-h-screen">
-      <div
-        class="bg-white p-8 rounded-lg shadow-md w-full text-center"
-        style="max-width: 480px"
-      >
-        <h1 class="text-2xl font-bold text-blue-600 mb-4">항해플러스</h1>
-        <p class="text-4xl font-bold text-gray-800 mb-4">404</p>
-        <p class="text-xl text-gray-600 mb-8">페이지를 찾을 수 없습니다</p>
-        <p class="text-gray-600 mb-8">
+    <main>
+      <div class="error-container">
+        <h1 class="title">항해플러스</h1>
+        <p class="error-code">404</p>
+        <p class="error-message">페이지를 찾을 수 없습니다</p>
+        <p class="error-description">
           요청하신 페이지가 존재하지 않거나 이동되었을 수 있습니다.
         </p>
-        <a href="/" class="bg-blue-600 text-white px-4 py-2 rounded font-bold">
-          홈으로 돌아가기
-        </a>
+        <a href="/" class="home-button"> 홈으로 돌아가기 </a>
       </div>
     </main>
   </body>
