--- a/404.html
+++ b/404.html
@@ -57,24 +57,9 @@
         text-decoration: none;
       }
     </style>
-    <script>
-      function redirectSPA() {
-        const params = new URLSearchParams(window.location.search);
-        if (params.get("redirected")) {
-          return;
-        }
-
-        const path = window.location.pathname;
-        const query = window.location.search;
-
-        const baseUrl = import.meta.env.VITE_BASE_PATH || '/';
-        window.location.replace(
-          `${baseUrl}/?redirect=${encodeURIComponent(path + query)}&redirected=true`,
-        );
-      }
-      redirectSPA();
-    </script>
     <title>Page Not Found</title>
+    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/404-Bj_2uMFf.js"></script>
+    <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js">
   </head>
   <body>
     <main>
