--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0;url=/front_5th_chapter1-1/" />
+    <!-- <meta http-equiv="refresh" content="0;url=/front_5th_chapter1-1/" /> -->
     <style>
       main {
         background-color: #f3f4f6;
@@ -57,15 +57,9 @@
         text-decoration: none;
       }
     </style>
-    <!-- <script type="module">
-      function redirectSPA() {
-        const path = window.location.pathname;
-        const baseUrl = import.meta.env.VITE_BASE_PATH || "/";
-        window.location.href = `${baseUrl}${path}`;
-      }
-      redirectSPA();
-    </script> -->
     <title>Page Not Found</title>
+    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/404-DHbBrLf3.js"></script>
+    <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js">
   </head>
   <body>
     <main>
