--- a/404.html
+++ b/404.html
@@ -57,9 +57,13 @@
         text-decoration: none;
       }
     </style>
+    <!-- <script type="module">
+      function redirectSPA() {
+        window.location.replace(import.meta.env.VITE_BASE_PATH || "/");
+      }
+      redirectSPA();
+    </script> -->
     <title>Page Not Found</title>
-    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/404-DHbBrLf3.js"></script>
-    <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js">
   </head>
   <body>
     <main>
