--- a/404.html
+++ b/404.html
@@ -3,75 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta http-equiv="refresh" content="0;url=${VITE_BASE_PATH}" /> -->
-    <style>
-      main {
-        background-color: #f3f4f6;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-      }
-
-      .error-container {
-        background-color: white;
-        padding: 2rem;
-        border-radius: 0.5rem;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 480px;
-        text-align: center;
-      }
-
-      .title {
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: #2563eb;
-        margin-bottom: 1rem;
-      }
-
-      .error-code {
-        font-size: 2.25rem;
-        font-weight: 700;
-        color: #1f2937;
-        margin-bottom: 1rem;
-      }
-
-      .error-message {
-        font-size: 1.25rem;
-        color: #4b5563;
-        margin-bottom: 2rem;
-      }
-
-      .error-description {
-        color: #4b5563;
-        margin-bottom: 2rem;
-      }
-
-      .home-button {
-        background-color: #2563eb;
-        color: white;
-        padding: 0.5rem 1rem;
-        border-radius: 0.25rem;
-        font-weight: 700;
-        text-decoration: none;
-      }
-    </style>
     <title>Page Not Found</title>
-    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/404-BkIWuOZ3.js"></script>
+    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/404-Cu4a1xCI.js"></script>
     <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js">
   </head>
-  <body>
-    <main>
-      <div class="error-container">
-        <h1 class="title">항해플러스</h1>
-        <p class="error-code">404</p>
-        <p class="error-message">페이지를 찾을 수 없습니다</p>
-        <p class="error-description">
-          요청하신 페이지가 존재하지 않거나 이동되었을 수 있습니다.
-        </p>
-        <a href="/" class="home-button"> 홈으로 돌아가기 </a>
-      </div>
-    </main>
-  </body>
+  <body></body>
 </html>
