--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>항해플러스 SNS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      const path = `${location.pathname}/${window.location.hash}`;
-      history.replaceState(null, null, path);
+      history.replaceState(null, null, window.location.hash);
     </script>
     <script type="module" crossorigin src="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
     <script type="module" crossorigin src="/front_5th_chapter1-1/assets/main-Cgph998X.js"></script>
