--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>항해플러스 SNS</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      const hashRouter = window.location.hash.substring(1);
-      history.replaceState(null, null, hashRouter);
-      window.addEventListener("hashchange", function (e) {
-        e.preventDefault();
-      });
-    </script>
-    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js"></script>
-    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/main-Cgph998X.js"></script>
+    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/main-LwkzNjyf.js"></script>
+    <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/modulepreload-polyfill-B5Qt9EMX.js">
+    <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/main-Cgph998X.js">
   </head>
   <body>
     <div id="root"></div>
