feat: base URL 적용 및 해시 라우터로 SPA 새로고침 이슈 해결

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>항해플러스 SNS</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="module">
+      function updateHistoryPath() {
+        const currentPath = window.location.pathname?.replace(/\/$/, "");
+        const currentPathWithoutHash = window.location.hash.substring(1);
+        const displayedPath = currentPath + currentPathWithoutHash;
+        history.replaceState(null, null, displayedPath);
+      }
+      updateHistoryPath();
+    </script>
   </head>
   <body>
     <div id="root"></div>
